Profile shift functionality

--- a/style.css
+++ b/style.css
@@ -2,8 +2,7 @@
 
 body{
   background-color: #c10033;
-  margin: 30px;
-  padding: 30px;
+  margin: 15px;
 }
 
 .container{
@@ -81,7 +80,7 @@ body{
 }
 
 #button1{
-  margin: 0px 190px 0px 0px; 
+  margin: 0px 190px 0px 0px;
 }
 
 #button2{
@@ -89,9 +88,10 @@ body{
 }
 
 .profileText{
-  height: 220px;
+  height: 260px;
   width: 330px;
   padding: 10px 15px 20px 15px;
+  margin-left: 10px;
   box-sizing: border-box;
   overflow-y: scroll;
   overflow-x: hidden;
@@ -121,12 +121,12 @@ body{
   background: #c9234e;
 }
 
-.profileH1{
+#profileH1{
   font-family: roc-grotesk-wide, sans-serif;
   margin: 10px 0px 5px 0px;
 }
 
-.profileH2{
+#profileH2{
   font-size: 1em;
   font-family: roc-grotesk-condensed, sans-serif;
   font-weight: 300;
@@ -135,7 +135,7 @@ body{
 
 .profileImg{
   width: 343px;
-  border-radius: 50px;
+  border-radius: 45px;
   margin: 5px 0px 0px 11px;
 }
 
