--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 @import url("https://use.typekit.net/pak4vxw.css");
 
 body{
-  background-color: #c10033;
-  margin: 15px;
+  background-image: linear-gradient(#c10033,#FF315D);
+  margin: 20px;
 }
 
 .container{
@@ -30,12 +30,130 @@ body{
   overflow-x: scroll;*/
 }
 
-.profile{
-  height: 663px;
-  /*display: flex;
-  justify-content: center;
+.intro{
+  height: 600px;
+  width: 325px;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
   align-items: center;
-  flex-direction: column;*/
+  justify-content: center;
+}
+
+#intro1{
+  display: flex;
+}
+
+#intro2{
+  display: none;
+}
+
+#intro3{
+  width: 335px;
+  display: none;
+}
+
+#intro4{
+  position: absolute;
+  display: none;
+}
+
+.introText{
+  height: 475px;
+  overflow-y: scroll;
+}
+
+.introText::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+.introText::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+
+/* Handle */
+.introText::-webkit-scrollbar-thumb {
+  background: #ff315d;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+.introText::-webkit-scrollbar-thumb:hover {
+  background: #c9234e;
+}
+
+#profileMenu{
+  width: 333px;
+  height: 333px;
+  margin-left: -10px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+#intro2 h1, #intro4 h1{
+  font-family: roc-grotesk-wide, sans-serif;
+  font-size: 1.5em;
+  color: white;
+}
+
+#intro2 p, #intro4 p{
+  font-family: Gopher, sans-serif;
+  margin: 8px 0px 8px 0px;
+}
+
+#intro4 p{
+  color: white;
+  margin-left: 15px;
+  text-indent: -15px;
+}
+
+#intro3 h2{
+  font-family: roc-grotesk-wide, sans-serif;
+  font-size: 1.5em;
+  color: white;
+}
+
+#title{
+  width: 325px;
+}
+
+#arrow1{
+  width: 255px;
+  cursor: pointer;
+}
+
+#arrow2{
+  width: 205px;
+  cursor: pointer;
+  margin-top: 10px;
+}
+
+#arrow3{
+  width: 205px;
+  cursor: pointer;
+  margin-top: 10px;
+}
+
+.menuPhoto{
+  width: 101px;
+  margin: 5px;
+  box-sizing: border-box;
+  border-radius: 100px;
+  cursor: pointer;
+}
+
+.menuPhoto:hover{
+  border: 4px solid #FF315D;
+}
+
+#profile{
+  height: 663px;
+  display: none;
 }
 
 #background{
@@ -58,7 +176,7 @@ body{
 #backgroundSwatch{
   height: 657px;
   width: 394px;
-  background-color: white;
+  background-color: #7C28CE;
   border-radius: 50px;
   position: absolute;
   z-index: -5;
@@ -68,15 +186,31 @@ body{
   width: 191px;
   position: absolute;
   margin-top: -630px;
+  z-index: 10;
+}
+
+#backButton{
+  width: 50px;
+  position: absolute;
+  margin: 25px 0px 0px 25px;
+  cursor: pointer;
+}
+
+#backButton2{
+  width: 205px;
+  margin: 10px 0px 0px -20px;
+  cursor: pointer;
 }
 
 #buttons{
   position: absolute;
   margin-top: -300px;
+  display: none;
 }
 
 .button{
   width: 65px;
+  cursor: pointer;
 }
 
 #button1{
@@ -96,8 +230,6 @@ body{
   overflow-y: scroll;
   overflow-x: hidden;
   z-index: 5;
-  scrollbar-width: 10px;
-  scrollbar-color: #ff315d;
 }
 
 .profileText::-webkit-scrollbar {
